cabal-version:      2.2
name:               refli-be
version:            0.1.0.0
category:           web

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude
  exposed-modules:
    Refli.Data.Scales
